--- a/E-commerce-main/src/views/Header.ejs
+++ b/E-commerce-main/src/views/Header.ejs
@@ -1,10 +1,4 @@
 <header>
-  <div class="logo">
-    <img src="/cart.png" alt="cart-icon" />
-    <div class="buttons">
-      <% if (isLogged) { %>
-      <button class="a" onclick="logout()">logout</button>
-      <% } %>
-    </div>
-  </div>
+  <img src="/logo.png" alt="logo-image" onclick="location.href='/home'">
+  <%- include('navbar') %>
 </header>
