--- a/E-commerce-main/src/views/Index.ejs
+++ b/E-commerce-main/src/views/Index.ejs
@@ -4,10 +4,90 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="css/main.css" rel="stylesheet" />
+    <link href="css/shop.css" rel="stylesheet" />
+    <link href="css/popup.css" rel="stylesheet" />
+
     <title>Dynamic production line</title>
   </head>
   <body>
-    <%- include('header', { isLogged: isLogged }) %>
-    <main class="container"></main>
+    <%- include('header') %> <%- include('popup') %>
+    <main class="container">
+      <div class="filterAndVideo">
+        <%- include('video') %>
+      <aside class="filter">
+          <h3>Search</h3>
+          <label for="productName">Product Name:</label>
+          <input
+            type="text"
+            id="productName"
+            name="productName"
+            required
+          />
+          <button value="<%= user.role %>" onclick="handleSearch(this.value)">Search</button>
+  
+          
+            <h3>Advanced Search</h3>
+            <label for="productName">Product Name:</label>
+            <input
+              type="text"
+              id="productName"
+              name="productName"
+            />
+            <label for="price">price:</label>
+            <input
+              type="text"
+              id="price"
+              name="price"
+            />
+            <label for="category">category:</label>
+            <select id="category" name="category">
+              <% categories.map(category => { %>
+                  <option value="<%= category._id %>"><%= category.category %></option>
+              <% }) %>
+            </select>
+            <button value="<%= user.role %>" onclick="handleFilter(this.value)">Search</button>
+      </aside>
+    </div>
+      <h1>Welcome to shopping</h1>
+      <section class="shop">
+        <% products.map((product) => {%>
+        <div class="product">
+          <span><%= product.productName %></span></span>
+          <div class="image">
+            <img src="<%= product.pathImage %>" alt="product" />
+          </div>
+          <span class="data">
+            <span><%= product.price %>&#8362;</span>
+            <span><%= product.description %></span></span>
+          <div class="actions">
+            <button
+              class="add"
+              data-product="<%= JSON.stringify(product) %>"
+              onclick="Cart.handleCart(this)"
+            >
+              Add
+            </button>
+            <% if(user && user.role === 'ADMIN'){ %>
+            <button
+              value="<%= product._id %>"
+              onclick="showPopup(this.value)"
+              class="delete"
+            >
+              Delete
+            </button>
+            <button class="edit">
+              <a href="/admin/dashboard/update-product/<%= product._id %>"> Edit </a>
+            </button>
+            <% } %>
+          </div>
+        </div>
+        <% }) %>
+      </section>
+    </main>
+    <%- include('footer') %>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/uuid@8.3.2/dist/umd/uuidv4.min.js"></script>
+    <script src="/js/LocalStorage.js"></script>
+    <script src="/js/index.js"></script>
   </body>
 </html>
