--- a/E-commerce-main/src/views/categoryForm.ejs
+++ b/E-commerce-main/src/views/categoryForm.ejs
@@ -19,6 +19,6 @@
       </form>
     </main>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-    <script src="categoryForm.js"></script>
+    <script src="/js/categoryForm.js"></script>
   </body>
 </html>
