--- a/E-commerce-main/public/css/main.css
+++ b/E-commerce-main/public/css/main.css
@@ -1,10 +1,16 @@
 * {
+  box-sizing: border-box; /* כלול ריפוד ומרווחים בתוך רוחב וגובה של אלמנט */
   margin: 0;
   padding: 0;
 }
 
+html, body {
+  width: 100%;
+  overflow-x: hidden; /* מנע גלילה צדדית */
+}
+
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: math;
 }
 
 a {
@@ -18,6 +24,9 @@ a {
   justify-content: center;
   flex-direction: column;
   min-height: 600px;
+  width: 100%; 
+  padding: 0 10px;
+  margin: 0 auto;
 }
 
 video {
@@ -25,16 +34,17 @@ video {
   height: auto; 
   max-height: 300px; 
   object-fit: cover; 
-  margin-bottom: 300px;
+  margin-bottom: 280px; 
 }
 
-.filterAndVideo{
+.filterAndVideo {
   display: flex;
   align-items: center;
-  justify-content: start;
-  width: 80%;
+  justify-content: center;
+  width: 100%; /* תופס את כל רוחב החלון */
 }
-.filter{
+
+.filter {
   min-height: 300px;
   margin: 5px;
   display: flex;
@@ -44,20 +54,19 @@ video {
   flex-direction: column;
 }
 
-.filter > button{
+.filter > button {
   margin: 10px 0;
 }
 
 header {
-  width: 80%;
-  height: 100px;
+  width: 100%;
+  height: 120px;
   margin: auto;
   display: flex;
   align-items: center;
   justify-content: space-between;
   border-bottom: 10px solid #0505056c;
 }
-
 
 header > img {
   width: 110px;
@@ -69,7 +78,7 @@ nav {
   display: flex;
   align-items: center;
   justify-content: space-around;
-  width: 40%;
+  width: 500px;
 }
 
 nav > li {
@@ -124,6 +133,7 @@ nav > li {
     transform: translateX(0);
   }
 }
+
 #sing_in,
 #sing_up {
   width: 35rem;
@@ -141,8 +151,8 @@ nav > li {
   color: white;
 }
 
-.sign_up__from,
-.sign_in__from {
+.sign_up__form,
+.sign_in__form {
   display: flex;
   flex-wrap: wrap;
 }
@@ -165,7 +175,8 @@ nav > li {
   nav {
     width: 100%;
   }
-  nav > li{
+  
+  nav > li {
     font-size: 16px;
   }
 
