--- a/E-commerce-main/src/views/showMenu.ejs
+++ b/E-commerce-main/src/views/showMenu.ejs
@@ -11,9 +11,24 @@
   <main class="container">
      <div class="filterAndVideo">
        <%- include('video') %>
-         <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-         <script src="https://cdn.jsdelivr.net/npm/uuid@8.3.2/dist/umd/uuidv4.min.js"></script>
-         <script src="/js/LocalStorage.js"></script>
-         <script src="/js/index.js"></script>
+     </div> 
+  </main> 
+  <div class="contact-info">
+    <h2>Contact Us</h2>
+    <p>If you have any questions or need support, please reach out to us through the following:</p>
+    <ul>
+      <li><a href="mailto:support@yourcompany.com">Email Us</a></li>
+      <li><a href="tel:+1234567890">Call Us</a></li>
+      <li><a href="/faq">FAQ</a></li>
+      <li><a href="/contact">Contact Form</a></li>
+    </ul>
+  </div>
+  <%- include('footer') %> 
+  
+  
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/uuid@8.3.2/dist/umd/uuidv4.min.js"></script>
+  <script src="/js/LocalStorage.js"></script>
+  <script src="/js/index.js"></script>
 </body>
 </html>
