--- a/E-commerce-main/src/views/listOrders.ejs
+++ b/E-commerce-main/src/views/listOrders.ejs
@@ -40,9 +40,9 @@
       </div>
     </main>
     <%- include('footer') %>
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/uuid@8.3.2/dist/umd/uuidv4.min.js"></script>
     <script src="/js/LocalStorage.js"></script>
-    <script src="/js/index.js"></script>
+    <script src="/js/index.js"></script> -->
   </body>
 </html>
