--- a/E-commerce-main/src/views/productForm.ejs
+++ b/E-commerce-main/src/views/productForm.ejs
@@ -55,5 +55,6 @@
     </main>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="/js/productForm.js"></script>
+    <script src="/js/index.js"></script>
   </body>
 </html>
