--- a/E-commerce-main/public/css/main.css
+++ b/E-commerce-main/public/css/main.css
@@ -191,7 +191,7 @@ footer {
   padding: 20px;
   text-align: center;
   border-top: 1px solid #e1e1e1;
-  position: relative; /* מאפשר לפוטר להיות מוצג במיקום נכון */
+  position: relative;
   margin-top: 20px; /* תוספת של רווח בין התוכן לפוטר */
 }
 
