--- a/E-commerce-main/public/css/main.css
+++ b/E-commerce-main/public/css/main.css
@@ -192,7 +192,7 @@ footer {
   text-align: center;
   border-top: 1px solid #e1e1e1;
   position: relative;
-  margin-top: 20px; /* תוספת של רווח בין התוכן לפוטר */
+  margin-top: 20px; 
 }
 
 .footer-content {
