--- a/E-commerce-main/src/views/showMenu.ejs
+++ b/E-commerce-main/src/views/showMenu.ejs
@@ -17,8 +17,7 @@
     <h2>Contact Us</h2>
     <p>If you have any questions or need support, please reach out to us through the following:</p>
     <ul>
-      <li><a href="mailto:support@yourcompany.com">Email Us</a></li>
-      <li><a href="tel:+1234567890">Call Us</a></li>
+      <li><a href="/map.html">Map</a></li>
       <li><a href="/faq">FAQ</a></li>
       <li><a href="/contact">Contact Form</a></li>
     </ul>
