--- a/E-commerce-main/public/css/main.css
+++ b/E-commerce-main/public/css/main.css
@@ -79,7 +79,7 @@ nav {
   display: flex;
   align-items: center;
   justify-content: space-around;
-  width: 500px;
+  width: 60%;
 }
 
 nav > li {
@@ -110,6 +110,23 @@ nav > li {
   color: white;
   font-size: 12px;
 }
+
+.yoga{
+  color: green;
+}
+
+#temp{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 140px;
+}
+#temp-value{
+  margin-bottom: 20px;
+  font-size: 14px;
+}
+
 
 .logo {
   display: flex;
