--- a/E-commerce-main/src/views/Index.ejs
+++ b/E-commerce-main/src/views/Index.ejs
@@ -27,11 +27,11 @@
   
           
             <h3>Advanced Search</h3>
-            <label for="productName">Product Name:</label>
+            <label for="name">Product Name:</label>
             <input
               type="text"
-              id="productName"
-              name="productName"
+              id="name"
+              name="name"
             />
             <label for="price">price:</label>
             <input
@@ -46,6 +46,7 @@
               <% }) %>
             </select>
             <button value="<%= user.role %>" onclick="handleFilter(this.value)">Search</button>
+            <span id="message-box"></span>
       </aside>
     </div>
       <h1>Welcome to shopping</h1>
