--- a/E-commerce-main/src/views/Index.ejs
+++ b/E-commerce-main/src/views/Index.ejs
@@ -7,7 +7,7 @@
     <link href="css/shop.css" rel="stylesheet" />
     <link href="css/popup.css" rel="stylesheet" />
 
-    <title>Dynamic production line</title>
+    <title>Product</title>
   </head>
   <body>
    <%- include('header') %> <%- include('popup') %>
