--- a/E-commerce-main/src/views/dashboard.ejs
+++ b/E-commerce-main/src/views/dashboard.ejs
@@ -6,7 +6,7 @@
     <link href="/css/main.css" rel="stylesheet" />
     <link href="/css/dashboard.css" rel="stylesheet" />
     <link href="/css/popup.css" rel="stylesheet" />
-    <title>Dynamic production line</title>
+    <title>Orders</title>
 </head>
 <body>
     <%- include('header') %>
