--- a/E-commerce-main/src/views/showMenu.ejs
+++ b/E-commerce-main/src/views/showMenu.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/css/main.css" rel="stylesheet">
-    <title>Welcome to Our Site</title>
+    <title>Soulmat Yoga</title>
 </head>
 <body>
   <%- include('header') %> 
@@ -14,12 +14,13 @@
      </div> 
   </main> 
   <div class="contact-info">
-    <h2>Contact Us</h2>
-    <p>If you have any questions or need support, please reach out to us through the following:</p>
-    <ul>
-      <li><a href="/map.html">Map</a></li>
-      <li><a href="/faq">FAQ</a></li>
-      <li><a href="/contact">Contact Form</a></li>
+    <h2>More</h2>
+   
+    <ul style="font-size: 18px;">
+      <li><a href="/map.html">Our Branches</a></li>
+      <li><a href="/fq.html">FAQ</a></li>
+      <li><a href="/know.html">Did You Know?</a></li>
+      <li><a href="/train.html">Training</a></li>
     </ul>
   </div>
   <%- include('footer') %> 
