--- a/E-commerce-main/public/css/credit.css
+++ b/E-commerce-main/public/css/credit.css
@@ -12,6 +12,8 @@
     border: 1px solid #ccc;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     z-index: 1000;
+    width: 600px;
+    height: 330px;
 }
 
 /* Overlay */
