--- a/E-commerce-main/public/css/main.css
+++ b/E-commerce-main/public/css/main.css
@@ -280,3 +280,18 @@ footer {
 .contact-info a:hover {
   text-decoration: underline;
 }
+
+.h2{
+  font-size: 25px;
+  font-style: oblique;
+}
+.social-link {
+  margin-top: 20px;
+  text-align: right; /* Align the link to the right */
+}
+
+.social-link a {
+  text-decoration: none;
+  display: inline-block;
+}
+
