--- a/E-commerce-main/src/views/Header.ejs
+++ b/E-commerce-main/src/views/Header.ejs
@@ -1,4 +1,7 @@
 <header>
   <img src="/logo.png" alt="logo-image" onclick="location.href='/home'">
+  <a href="https://www.facebook.com/profile.php?id=61563824540833" target="_blank">
+    <img src="/facebook.png" alt="Facebook" style="width: 80px; height: 80px; margin-left:-240px; margin-bottom: 2px;">
+  </a>
   <%- include('navbar') %>
 </header>
