--- a/E-commerce-main/src/views/cart.ejs
+++ b/E-commerce-main/src/views/cart.ejs
@@ -22,18 +22,25 @@
     <!-- Popup Form -->
 <div id="popup-form">
     <h3>Fill in your details</h3>
+    <br>
     <form id="popup-form-content">
         <label for="card-number">Card Number:</label>
         <input type="text" id="card-number" name="card-number" required>
-        <br>
+        <br> <br>
         <label for="expiry-date">Expiration Date (MM/YY):</label>
         <label for="expiry-date">Expiration Date:</label>
 <input type="month" id="expiry-date" name="expiry-date" required>
 
-        <br>
+        <br> <br>
         <label for="cvv">CVV:</label>
         <input type="text" id="cvv" name="cvv" required maxlength="4" pattern="\d{3,4}">
-        <br>
+        <br> <br>
+        <label for="card-number">City For delivery:</label>
+        <input type="text" char="cityr" name="City For delivery" required>
+        <br> <br>
+        <label for="card-number">Full Adress:</label>
+        <input type="text" char="adress" name="Full Adress:" required>
+        <br><br>
         <button type="submit">Make Order</button>
         <button type="button" onclick="closePopup()">Cancel</button>
     </form>
