--- a/E-commerce-main/src/views/footer.ejs
+++ b/E-commerce-main/src/views/footer.ejs
@@ -1,3 +1,3 @@
 <footer>
-    <p>&copy; 2024 Your Company. All rights reserved.</p>
+    <p>&copy; 2024 SoulMat Yoga. All rights reserved.</p>
 </footer>
