--- a/E-commerce-main/src/views/sign_in.ejs
+++ b/E-commerce-main/src/views/sign_in.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/css/main.css" rel="stylesheet" />
     <link href="/css/form.css" rel="stylesheet" />
-    <title>Dynamic production line</title>
+    <title>Sign In</title>
   </head>
   <body>
     <%- include('logo') %>
