--- a/E-commerce-main/src/views/showMenu.ejs
+++ b/E-commerce-main/src/views/showMenu.ejs
@@ -20,7 +20,7 @@
       <li><a href="/map.html">Our Branches</a></li>
       <li><a href="/fq.html">FAQ</a></li>
       <li><a href="/know.html">Did You Know?</a></li>
-      <li><a href="/train.html">Training</a></li>
+      <li><a href="/train.html">Recommended Yoga Exercises</a></li>
     </ul>
   </div>
   <%- include('footer') %> 
