--- a/E-commerce-main/public/css/footer.css
+++ b/E-commerce-main/public/css/footer.css
@@ -31,7 +31,7 @@ footer {
   
   .footer-customer-service a {
     text-decoration: none;
-    color: #333;
+    color: #2a2929;
   }
   
   .footer-customer-service a:hover {
