--- a/E-commerce-main/src/views/Index.ejs
+++ b/E-commerce-main/src/views/Index.ejs
@@ -48,7 +48,7 @@
             <button value="<%= user.role %>" onclick="handleFilter(this.value)">Search</button>
           </aside>
         </div>
-        <h1>Welcome to shopping</h1>
+        <h1>Welcome To Shopping</h1>
         <span id="message-box"></span>
       <section class="shop">
         <% products.map((product) => {%>
