--- a/E-commerce-main/public/css/styles.css
+++ b/E-commerce-main/public/css/styles.css
@@ -9,8 +9,8 @@ p {
 body {
     font-family: math;
     line-height: 1.6;
-    background-color: #f4f4f4;
-    color: #333;
+    background-color: #f2eded;
+    color: #282727;
     background-image: url('/background4.png');
     /* Replace with your image path */
     background-size: cover;
