orders fix and css

--- a/E-commerce-main/src/views/Index.ejs
+++ b/E-commerce-main/src/views/Index.ejs
@@ -53,7 +53,7 @@
       <section class="shop">
         <% products.map((product) => {%>
         <div class="product">
-          <span><%= product.productName %></span></span>
+          <span class="nameF"><%= product.productName %></span></span>
           <div class="image">
             <img src="<%= product.pathImage %>" alt="product" />
           </div>
