--- a/E-commerce-main/public/css/main.css
+++ b/E-commerce-main/public/css/main.css
@@ -98,6 +98,7 @@ nav > li {
 
 .count {
   margin-top: 10px;
+  font-size: 20px;
 }
 
 .badge {
@@ -167,6 +168,7 @@ nav > li {
   height: 40px;
   background-color: rgb(0, 0, 0);
   color: white;
+  font-family: math;
 }
 
 .sign_up__form,
