--- a/E-commerce-main/src/views/Header.ejs
+++ b/E-commerce-main/src/views/Header.ejs
@@ -1,7 +1,5 @@
 <header>
-  <img src="/logo.png" alt="logo-image" onclick="location.href='/home'">
-  <a href="https://www.facebook.com/profile.php?id=61563824540833" target="_blank">
-    <img src="/facebook.png" alt="Facebook" style="width: 80px; height: 80px; margin-left:-240px; margin-bottom: 2px;">
-  </a>
+  <img src="/logo.png" alt="logo-image" class="logo" onclick="location.href='/home'">
+  <img src="/facebook.png" alt="Facebook" class="facebook" onclick="location.href='https://www.facebook.com/profile.php?id=61563824540833'" target="_blank">
   <%- include('navbar') %>
 </header>
