--- a/E-commerce-main/src/views/cart.ejs
+++ b/E-commerce-main/src/views/cart.ejs
@@ -12,7 +12,7 @@
     <%- include('header') %>
     <main class="container">
         <h1>Products</h1>
-        <section id="cart"></section>
+        <section id="cart" class="cart-container"></section>
         <h2 id="total">total: </h2>
         <% if(token){ %>
             <button value="<%= user.id %>" onclick="handleBay(this.value)" id="buy">buy</button>
