--- a/E-commerce-main/src/views/accountForm.ejs
+++ b/E-commerce-main/src/views/accountForm.ejs
@@ -52,4 +52,5 @@
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="/js/accountForm.js"></script>
   </body>
+  <%- include('footer') %> 
 </html>
