--- a/E-commerce-main/src/views/sign_in.ejs
+++ b/E-commerce-main/src/views/sign_in.ejs
@@ -8,7 +8,7 @@
     <title>Sign In</title>
   </head>
   <body>
-    <%- include('logo') %>
+    <!-- <%- include('logo') %> -->
     <main class="container">
       <h2 class="title">Sign in</h2>
       <form id="sing_in">
