--- a/E-commerce-main/src/views/categoryForm.ejs
+++ b/E-commerce-main/src/views/categoryForm.ejs
@@ -21,4 +21,5 @@
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="/js/categoryForm.js"></script>
   </body>
+  <%- include('footer') %> 
 </html>
