--- a/E-commerce-main/src/views/showMenu.ejs
+++ b/E-commerce-main/src/views/showMenu.ejs
@@ -13,16 +13,27 @@
        <%- include('video') %>
      </div> 
   </main> 
-  <div class="contact-info">
-    <h2>More</h2>
-   
-    <ul style="font-size: 18px;">
-      <li><a href="/map.html">Our Branches</a></li>
-      <li><a href="/fq.html">FAQ</a></li>
-      <li><a href="/know.html">Did You Know?</a></li>
-      <li><a href="/train.html">Recommended Yoga Exercises</a></li>
-    </ul>
+  <div class="content">
+    <div class="contact-info">
+      <h2>More</h2>
+      <ul style="font-size: 18px;">
+        <li><a href="/map.html">Our Branches</a></li>
+        <li><a href="/fq.html">FAQ</a></li>
+        <li><a href="/know.html">Did You Know?</a></li>
+        <li><a href="/train.html">Recommended Yoga Exercises</a></li>
+      </ul>
+    </div>
+  
+    <div class="newsletter">
+      <h2>Subscribe to our Newsletter</h2>
+      <form>
+        <input type="email" placeholder="Enter your email" required>
+        <button type="button" onclick="location.reload();">Subscribe</button>
+      </form>
+    </div>
+    
   </div>
+  
   <%- include('footer') %> 
   
   
